--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,17 +12,8 @@
     <link rel="icon" href="hexlet_icon.svg">
   </head>
   <body class="h-100 bg-light">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="h-100" id="chat"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div class="h-100">
+      <div class="h-100" id="chat"></div>
+    </div>
   </body>
 </html>
