--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,17 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>Hexlet Chat</title>
-    <link rel="icon" href="hexlet_icon.svg">
+    <link rel="shortcut icon" href="hexlet_icon.svg" type="image/x-icon">
+    <title>Chat-Slack</title>
   </head>
   <body class="h-100 bg-light">
     <div class="h-100">
-      <div class="h-100" id="chat"></div>
+      <div class="h-100" id="root"></div>
     </div>
   </body>
 </html>
